Test and Gradle fixes